# digital_ghost

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  Dockerfile  MCP.md  Makefile  PLAN.md  PROJECT.md  PROJECT_PLAN.md  PROJECT_TEAM.md  RAG.md  README.md  SCOPE.md  SETUP.md  app.py  backend.py  config.py  demo_plan.md  docker-compose.yml  main.py  project.md  pyproject.toml
.githooks/: post-commit
data/chroma/: chroma.sqlite3
docs/: README.md  architecture.md  attack-scenarios.md  changes.md  mcp-attacks.md  mcp-servers.md  plan.md  project.md  setup.md
docs/architecture/: agent.md  mcp-layer.md  overview.md  rag-layer.md
docs/attacks/: ATTACK_INDEX.md
docs/guides/: adding-an-attack.md  running-attacks.md  testbench.md
docs/pharma_attack/: README_ATTACKS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
pharma_attack/: .env.example  .gitignore  ATTACK_SCENARIOS_CURRENT_RAG.md  pyproject.toml
pharma_attack/.claude/skills/architecture/: SKILL.md
pharma_attack/.claude/skills/attack-spec/: SKILL.md
pharma_attack/.claude/skills/changes/: SKILL.md
pharma_attack/.claude/skills/documentation/: SKILL.md
pharma_attack/.claude/skills/testing/: SKILL.md
pharma_attack/corpus/clean/: clean_001_BF042_baseline.txt
pharma_attack/corpus/poison_passive/: poison_passive_001_BF042_fake_safety.txt
pharma_attack/scenarios/: mcp_attack_common.py  test_3g.py  test_3h.py  test_3i.py  test_a3_lims_data_integrity.py  test_a4_tool_description_poisoning.py  test_a5_report_exfiltration.py  test_a6_cross_tool_chaining.py  test_a9_schema_aware_sql_injection.py  test_mcp_rag_rw.py
pharma_attack/scripts/: a2_pdf_trojan_smoke.py
pharma_attack/src/pharma_attack/: config_runtime.py
pharma_attack/srcipts/: __init__.py  attack_rag_lab.py  chroma_lab.py  metrics.py  payloads.py  reset_attack_lab.py  stub_attack.py
pharma_attack/test/: test_attack_stub_scenarios.py
scripts/: chat_loop.py  create_ephemeral_pdf.py  create_poison_pdf.py  demo_inject_poison.py  drugs.txt  seed_demo.py  setup_kb.py  smoketest_rag.py  test_session.py  test_tools.py
scripts/scenarios/: test_3a.py  test_3b.py  test_3c.py  test_3d.py  test_3e.py  test_3f.py  test_3g.py
src/digital_ghost.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/pharma_help/: config.py
tests/: conftest.py  test_asr_metrics.py  test_mcp_client.py  test_vector1_ipi.py  test_vector2_rag_poisoning.py
tests/attack_scenarios/: test_3c.py  test_3e.py
tests/benchmarks/: pharma_sec_bench.py
workspace/: .env.example  compound_approval.py  lims_config.py
(+63 files in other folders)
