[project]
name = "digital-ghost"
version = "0.1.0"
description = "Context poisoning and indirect prompt injection measurement in agentic AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "chromadb>=0.5.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
]
